--- a/sty.css
+++ b/sty.css
@@ -1,45 +1,44 @@
-body{font-family:"Verdana",sans-serif;margin:0;padding:0}
+/* navy:112b3c blue:205375 orange:f66b0e white:efefef*/
+
+body{font-family:"Verdana",sans-serif;margin:0;padding:0;background-color: #efefef;color: #101010;}
 header{padding:48px 0;}
-h1,h2,h3,p{margin:0;padding:8px 16px}
-a{color:#505;text-decoration:none}
+h1,h2,h3{margin:0;padding:8px 16px;color: #f66b0e;}
+p{margin:6px 16px}
+a{color:#205375;text-decoration:none}
 a:hover{text-decoration:underline}
-a:active{background-color:#505;color:#fff}
-a:visited{color:#FF0080}
+a:active{background-color: #205375;color: #efefef}
+a:visited{color:#112b3c}
 footer{padding:20px;text-align:center}
 
-@keyframes fade{
-  from{opacity:0.1}
-  to{opacity:1}
-}
-@-webkit-keyframes fade{
-  from{opacity:0.1}
-  to{opacity:1}
-}
+.wh{color:#fff;text-shadow:0 0 2px #112b3c}
+.skils{padding:8px;margin:2px;color:#fff;background-color:#112b3c;display:inline-block}
+
+#ini{font-size:1.1rem}
+#hdr{background-image:url('img/protruding-squares.svg');background-position:center;background-size:cover}
 
 .mtext{text-align:center}
 .mtext p{padding:16px 32px}
-.qel{margin:8px 12px;display:flex;box-shadow:2px 2px 4px #303}
-.qel img{width:150px;height:150px}
-.alk{padding:6px 16px;display:inline-block}
-.bk{background:#505;color:#fff}
+.qel{margin:8px 12px;display:flex;border: 1px solid #ddd;}
+.qel img{width:120px;height:120px}
+.alk{margin:0 12px;padding:8px 16px;display:inline-block}
+.bk{background:#112b3c;color: #efefef}
 .dbox{margin:4px;padding:16px}
 
 #que{display:grid;grid-template-columns:1fr}
-#soc{margin:0px 8px;display:grid;grid-template-columns:100%;grid-gap:2px}
-#soc a{display:inline-block;padding:12px;color:#fff;text-align:center}
-
-@media (min-width:600px){
+#soc{margin:0px 8px;display:grid;grid-template-columns:1fr;gap:2px}
+#soc a{display:inline-block;padding:12px;color: #efefef;background-color: #205375;text-align:center}
+@media (min-width:540px){
 body > *{margin:auto 16px}
+.mtext{text-align: start;}
 
 #que{margin:8px 16px}
 #soc{margin:8px 24px;grid-template-columns:1fr 1fr}
 }
-@media (min-width:1024px){
+@media (min-width:960px){
 body > h2,body > p{margin:auto 32px}
 
-#que{grid-template-columns:50% 50%}
-#soc{margin:8px 32px;grid-template-columns:1fr 1fr 1fr}
+#soc{margin:8px 32px;grid-template-columns:repeat(4,1fr)}
 }
-@media (min-width:1440px){
+@media (min-width:1360px){
 body > h2, body > p{margin: auto 64px}
 }
