--- a/sty.css
+++ b/sty.css
@@ -11,16 +11,16 @@ a:visited{color:#112b3c}
 footer{padding:20px;text-align:center}
 
 .wh{color:#fff;text-shadow:0 0 2px #112b3c}
-.skils{padding:8px;margin:2px;color:#fff;background-color:#112b3c;display:inline-block}
+.skils{padding:8px;margin:2px;color:#fff;background-color:#112b3c;border-radius: 4px;display:inline-block}
 
 #ini{font-size:1.1rem}
 #hdr{background-image:url('img/protruding-squares.svg');background-position:center;background-size:contain}
 
 .mtext{text-align:center}
 .mtext p{padding:16px 32px}
-.qel{margin:8px 12px;display:flex;border: 1px solid #ddd;}
+.qel{margin:8px 12px;display:flex;box-shadow:0 2px 4px #112b3c;}
 .qel img{width:120px;height:120px}
-.alk{margin:0 12px;padding:8px 16px;display:inline-block}
+.alk{margin:0 12px;padding:8px;display:inline-block;}
 .bk{background:#112b3c;color: #efefef}
 .dbox{margin:4px;padding:16px}
 
@@ -28,7 +28,8 @@ footer{padding:20px;text-align:center}
 #soc{margin:0px 8px;display:grid;grid-template-columns:1fr;gap:2px}
 #soc a{display:inline-block;padding:12px;color: #efefef;background-color: #205375;text-align:center}
 @media (min-width:540px){
-body > *{margin:auto 16px}
+body > section{margin:auto 16px}
+header{padding-left: 2rem;}
 .mtext{text-align: start;}
 
 #que{margin:8px 16px}
