--- a/ActSom/style.css
+++ b/ActSom/style.css
@@ -67,7 +67,7 @@ section{
 }
 .doublec{display:block}
 .doublec img{border-radius: 4px}
-.inv{}
+
 hr{margin: 8px 16px;border-top: 2px solid var(--grayt)}
 footer{
   margin: 0;padding: 16px 16px;
@@ -128,6 +128,7 @@ footer{
 }
 #products > div{
   margin-right: 8px;
+  margin-bottom: 8px;
   min-width: 192px;
   border-bottom: 4px solid #eee;
   transition: 250ms ease; 
@@ -156,6 +157,7 @@ footer{
 }
 .ctab:hover{
   background-color: var(--blue);
+  box-shadow: 4px 4px var(--whitet);
 }
 .gbtns a{
   margin:0 4px 0 0;padding:12px;
@@ -163,6 +165,9 @@ footer{
   color: var(--whitet);
   display: inline-block;
   border-radius: 4px;
+}
+.gbtns a:hover{
+  box-shadow: 0px 0px 4px #fff;
 }
 
 @media screen and (min-width: 800px) {
