--- a/ActSom/style.css
+++ b/ActSom/style.css
@@ -33,7 +33,7 @@ header{
   background-repeat: no-repeat;
 }
 h1,h2,h3,h4,h5,h6{
-  font-family: "Comfortaa";
+  font-family: "Lato";
 }
 header > div{
   padding: 32px 16px;
